back/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-microservice
  labels:
    app: user-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-microservice
  template:
    metadata:
      labels:
        app: user-microservice
    spec:
      hostNetwork: true
      containers:
        - name: user-ms
          image: jabaxnt/user-microservice:latest
          ports:
            - containerPort: 8060
