back/k8s/db-food.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-food
  template:
    metadata:
      labels:
        app: postgres-food
    spec:
      containers:
        - name: postgres-food
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /data/postgres
              name: db-food-volume
      volumes:
        - name: db-food-volume
          persistentVolumeClaim:
            claimName: db-food-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-food
spec:
  selector:
    app: postgres-food
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
