back/k8s/db-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      containers:
        - name: postgres-user
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /data/postgres
              name: db-user-volume
      volumes:
        - name: db-user-volume
          persistentVolumeClaim:
            claimName: db-user-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
spec:
  selector:
    app: postgres-user
  ports:
    - protocol: TCP
      port: 5434
      targetPort: 5432
