back/k8s/food-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food-microservice
  template:
    metadata:
      labels:
        app: food-microservice
    spec:
      containers:
        - name: food-microservice
          image: jabaxnt/food-microservice:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: food-microservice
spec:
  selector:
    app: food-microservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
