back/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-microservice-service
spec:
  selector:
    app: user-microservice-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8060
