back/k8s/user-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-microservice
  template:
    metadata:
      labels:
        app: user-microservice
    spec:
      containers:
        - name: user-microservice
          image: jabaxnt/user-microservice:latest
          ports:
            - containerPort: 8060
---
apiVersion: v1
kind: Service
metadata:
  name: user-microservice
spec:
  selector:
    app: user-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8060
